--- a/app/src/main/res/layout/list_order.xml
+++ b/app/src/main/res/layout/list_order.xml
@@ -6,29 +6,44 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/white">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/blue2"
+            android:layout_marginLeft="5dp"
             android:id="@+id/tv_idku"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/blue2"
+            android:layout_marginLeft="5dp"
             android:id="@+id/tv_idproduku"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/blue2"
+            android:layout_marginLeft="5dp"
             android:id="@+id/tv_namacustku"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/blue2"
+            android:layout_marginLeft="5dp"
             android:id="@+id/tv_alamatku"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/blue2"
+            android:layout_marginLeft="5dp"
+            android:inputType="number"
             android:id="@+id/tv_jumlahku"/>
         <TextView
             android:layout_width="match_parent"
+            android:textColor="@color/blue2"
+            android:layout_marginLeft="5dp"
+            android:inputType="number"
             android:layout_height="wrap_content"
             android:id="@+id/tv_totalku"/>
 
@@ -40,12 +55,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Delete"
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/white"
                 android:id="@+id/btndeleteorder"
                 android:padding="4dp"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="UPDATE"
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/white"
                 android:id="@+id/btnupdateorder"
                 android:padding="4dp"/>
         </LinearLayout>
