--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UpdateActivity" android:orientation="vertical"
-    android:gravity="center_vertical">
+    tools:context=".UpdateActivity"
+    android:orientation="vertical"
+    android:gravity="center">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,6 +42,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
+        <Button
+            android:id="@+id/btn_menu"
+            style="@style/btn_Style"
+            android:text="Menu"
+            android:onClick="Menu"
+            />
         <Button
             style="@style/btn_Style"
             android:id="@+id/btn_update"
