--- a/app/src/main/res/layout/activity_update_order.xml
+++ b/app/src/main/res/layout/activity_update_order.xml
@@ -39,17 +39,25 @@
     <EditText
         style="@style/edit_text"
         android:id="@+id/input_jumlahu"
-        android:hint="Jumlah Product"/>
+        android:hint="Jumlah Product"
+        android:inputType="number"/>
     <EditText
         style="@style/edit_text"
         android:id="@+id/input_totalu"
-        android:hint="Total Hargau"/>
+        android:hint="Total Hargau"
+        android:inputType="number"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         >
+        <Button
+            android:id="@+id/btn_backou"
+            style="@style/btn_Style"
+            android:text="Back"
+            android:onClick="Menuo"
+            />
         <Button
             style="@style/btn_Style"
             android:id="@+id/btn_updateorder"
